@@ -3,7 +3,6 @@ package org.jabref.logic.search;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabases;
@@ -24,15 +23,18 @@ public class DatabaseSearcher {
         this.database = Objects.requireNonNull(database);
     }
 
+    /**
+     * @return The matches in the order they appear in the library.
+     */
     public List<BibEntry> getMatches() {
-        LOGGER.debug("Search term: " + query);
+        LOGGER.debug("Search term: {}", query);
 
         if (!query.isValid()) {
-            LOGGER.warn("Search failed: illegal search expression");
+            LOGGER.warn("Search failed: invalid search expression");
             return Collections.emptyList();
         }
 
-        List<BibEntry> matchEntries = database.getEntries().stream().filter(query::isMatch).collect(Collectors.toList());
+        List<BibEntry> matchEntries = database.getEntries().stream().filter(query::isMatch).toList();
         return BibDatabases.purgeEmptyEntries(matchEntries);
     }
 }
